# tone

./: .dockerignore  .gitignore  .infisical.json  CLAUDE.md  app.py  impacted-apis-report.json  impacted-apis-report.md  main.py  main_ee.py  postman_collection.json  pyproject.toml  requirements.txt  setup-project.md  test_incoming_call.py  test_minimal.py  vercel.json
.claude/: settings.local.json
.github/workflows/: dev.yaml  main.yaml
backend/: .infisical.json  LICENSE  README.md  app.py  requirements.txt
core/: Api.md  Dockerfile  bot.py  config.py  context.py  test_bot.py
core/alembic/: env.py
core/api/: deps.py
core/database/: base.py  session.py
core/middleware/: auth.py
core/models/: __init__.py  agent.py  agent_channel.py  agent_config.py  agent_phone_numbers.py  api_key.py  base.py  channel.py  channel_phone_numbers.py  email_verification.py  enums.py  generated_api_key.py  member.py  models.py  organization_access_request.py  organization_invite.py  password_reset.py  service.py  service_provider.py  user.py  voice.py
dev/: README.md  add_agent_id_column.py  azure-voices.yaml  dev-data.json  fix_system_prompt_nullable.py  hathora-tts.yaml  llm_meta_data_schema.yaml  piper_tts_voices.json  seed.py  stt_meta_data_schema.yaml  tts_meta_data_schema.yaml
ee/: config.py
frontend/: .gitignore  CLAUDE.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  prettier.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json
migrations/: env.py
postman/: .last_run  agents.postman_collection.json
(+344 files in other folders)
